--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <header>
     <h1>{{title}}</h1>
-    <nav>
+    <!-- <nav>
       <a routerLink="/signin" routerLinkActive="active"  ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>SignIn</a>
       <a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>SignUp</a>
-  </nav>
+  </nav> -->
+  <app-profile/>
 </header>
