add pagination and ngxs

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -12,8 +12,8 @@
       <app-header/>
   </div>
   <main>
-    @if (items().length>0) {
-      <h1>{{ items()[0].name}}</h1>
+    @if (items$().data.length>0) {
+      <h1>{{ items$().data[0]}}</h1>
     }
     @else {
       <h1>hello</h1>
