--- a/frontend/src/app/nav-bar/nav-bar.component.css
+++ b/frontend/src/app/nav-bar/nav-bar.component.css
@@ -3,7 +3,7 @@ nav{
 }
 
 nav>a{
-    @apply hover:cursor-pointer hover:font-bold
+    @apply hover:cursor-pointer hover:font-bold dark:text-white text-black
 }
 
 .active{
