--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,7 @@
 <nav>
-    <a routerLink="/home" routerLinkActive="active"  ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Home</a>
+    <a routerLink="/home" class="flex space-x-2 items-center leading-10" routerLinkActive="active"  ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true} mat-fab aria-label="Example icon button with a add icon">
+        
+        <span class="">Home</span>
+    </a>
     <a routerLink="/items" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]={exact:true}>Items</a>
 </nav>
