--- a/frontend/src/app/categorie/categorie.component.html
+++ b/frontend/src/app/categorie/categorie.component.html
@@ -1,1 +1,32 @@
-<p>categorie works!</p>
+<nz-modal
+  [nzVisible]="isVisible()"
+  nzTitle="Add Categorie"
+  (nzOnCancel)="handleCancel()"
+  [nzMask]="true"
+  [nzFooter]="null"
+  [nzCancelText]="null"
+  [nzOkText]="null"
+  [nzWidth]="300"
+>
+  <ng-container *nzModalContent>
+    <form [formGroup]="categorie" class="flex flex-col space-y-3">
+      <div class="flex flex-col space-y-1">
+        <label for="name">Name</label>
+        <input
+          formControlName="name"
+          class="form-input"
+          type="text"
+          name="name"
+          [minlength]="2"
+        />
+      </div>
+      <div class="flex flex-col space-y-1">
+        <label for="description">Description</label>
+        <textarea formControlName="description" name="description"></textarea>
+      </div>
+      <div class="flex flex-col">
+        <button nz-button [nzLoading]="isSubmit()" (click)="PostCategorie();isSubmit.set(true)" [disabled]="categorie.invalid">Submit</button>
+      </div>
+    </form>
+  </ng-container>
+</nz-modal>
