--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,3 +6,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active{
+    @apply border-b border-b-blue-500 
+}
+
