--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -79,12 +79,12 @@
       </ng-template>
     </nz-header>
     <nz-content
-      class="overflow-y-auto row-span-10 row-start-2 row-end-11 h-full"
+      class="overflow-y-auto row-span-11 row-start-2 row-end-12 h-full"
     >
       <div class="h-full"><router-outlet /></div>
     </nz-content>
-    @if (!(router.url.includes("register") || router.url.includes("login"))) {
+    <!-- @if (!(router.url.includes("register") || router.url.includes("login"))) {
     <nz-footer [hidden]="">Ant Design ©2020 Implement By Angular</nz-footer>
-    }
+    } -->
   </nz-layout>
 </nz-layout>
