--- a/frontend/src/app/item/components/itemdetail/itemdetail.component.html
+++ b/frontend/src/app/item/components/itemdetail/itemdetail.component.html
@@ -1,9 +1,8 @@
 @if (isAuthenticate()) {
   <nz-card
     [nzCover]="coverTemplate"
-    class="hover:scale-110 hover:shadow-md hover:cursor-pointer hover:shadow-blue-400 rounded-md"
-    style="height: 200px; width: 200px"
-    [nzActions]="[actionSetting, actionEdit, actionEllipsis]"
+    class="hover:scale-105 hover:shadow-md hover:cursor-pointer hover:shadow-blue-400"
+    
   >
     <nz-card-meta
       [nzTitle]="currentItem()?.name!"
