--- a/frontend/src/app/item/components/itemdetail/itemdetail.component.html
+++ b/frontend/src/app/item/components/itemdetail/itemdetail.component.html
@@ -1,40 +1,25 @@
-@if (isAuthenticate()) {
-  <nz-card
-    [nzCover]="coverTemplate"
-    class="hover:scale-105 hover:shadow-md hover:cursor-pointer hover:shadow-blue-400"
+
+<nz-card nzHoverable  [nzCover]="coverTemplate" [nzActions]="[comment,edit]">
+  <nz-card-meta [nzTitle]="currentItem()?.name!" [nzDescription]="tag">
     
-  >
-    <nz-card-meta
-      [nzTitle]="currentItem()?.name!"
-      [nzDescription]="currentItem()?.description ?? ''"
-    ></nz-card-meta>
-  </nz-card>
-}
-@else {
-  <nz-card
-  [nzCover]="coverTemplate"
-  class="hover:scale-110 hover:shadow-md hover:cursor-pointer hover:shadow-blue-400 rounded-md"
-  style="height: 200px; width: 200px"
-  >
-    <nz-card-meta
-      [nzTitle]="currentItem()?.name!"
-      [nzDescription]="currentItem()?.description ?? ''"
-    ></nz-card-meta>
-  </nz-card>
-}
+  </nz-card-meta>
+</nz-card>
 <ng-template #coverTemplate>
-  <img
-    nz-image
-    alt="{{ currentItem()?.name }}"
-    nzSrc="{{ currentItem()?.imageUrl }}"
-  />
+  <img alt="example" [src]="currentItem()?.imageUrl"/>
 </ng-template>
-<ng-template #actionSetting>
-  <span nz-icon nzType="setting"></span>
+
+<ng-template #comment>
+  <span nz-icon (click)="ShowComment()" nzType="comment" nzTheme="outline"></span>
 </ng-template>
-<ng-template #actionEdit>
-  <span nz-icon nzType="edit"></span>
+
+<ng-template #edit>
+  <span nz-icon nzType="edit" nzTheme="outline"></span>
 </ng-template>
-<ng-template #actionEllipsis>
-  <span nz-icon nzType="ellipsis"></span>
+
+<ng-template #tag>
+  <div class="flex space-x-2">
+    @for (item of currentItem()?.categories; track item.id) {
+      <nz-tag [nzColor]="'gray'" [nzMode]="'checkable'">{{item.name}}</nz-tag>
+    }
+  </div>
 </ng-template>
