--- a/frontend/src/app/item/components/add-item/add-item.component.html
+++ b/frontend/src/app/item/components/add-item/add-item.component.html
@@ -93,7 +93,7 @@
     <div class="flex items-center space-x-2">
       <div class="flex flex-col justify-center space-y-1 flex-1">
         <label for="categorie">Categories</label>
-        <nz-select
+        <nz-select style="border-radius: 5px;"
           [nzMaxTagPlaceholder]="tagPlaceHolder"
           nzMode="multiple"
           formControlName="categories"
