--- a/frontend/src/app/item/item.component.html
+++ b/frontend/src/app/item/item.component.html
@@ -38,7 +38,7 @@
       }
       </nz-carousel>
     </div>
-    <div class="row-span-4 grid sm:grid-cols-3 md:grid-cols-4 overflow-y-auto xl:grid-cols-6 gap-4 grid-rows-3">
+    <div class="row-span-4 flex justify-center gap-4 flex-wrap overflow-x-hidden overflow-y-auto">
 
       @if (items().data.length>0) { 
         @for (item of items().data; track item.id) {
