--- a/frontend/src/app/account/register/register.component.html
+++ b/frontend/src/app/account/register/register.component.html
@@ -1,7 +1,75 @@
-<div class="flex justify-center items-center h-full bg-gray-500">
-  <nz-card class=" shadow-md" [nzTitle]="'Create your account'">
+<div class="flex sm:flex-row flex-col h-full bg-gray-400">
+  <!-- <nz-card class=" shadow-md" [nzTitle]="'Create your account'"> -->
 
-    <form [formGroup]="register" class="flex flex-col space-y-4" appSamevalidator   (ngSubmit)="isSubmit.set(true);submitForm()">
+    <svg version="1.0" class="sm:flex-1 sm:h-full" xmlns="http://www.w3.org/2000/svg"
+  viewBox="0 0 1000.000000 1000.000000"
+ preserveAspectRatio="xMidYMid meet">
+
+<g transform="translate(0.000000,1000.000000) scale(0.100000,-0.100000)"
+fill="#000000" stroke="none">
+<path d="M6145 8007 c-3 -7 -4 -136 -3 -287 l3 -275 285 0 285 0 3 288 2 287
+-285 0 c-221 0 -287 -3 -290 -13z"/>
+<path d="M5480 7525 l0 -245 250 0 250 0 0 245 0 245 -250 0 -250 0 0 -245z"/>
+<path d="M6580 7120 l0 -200 200 0 200 0 0 200 0 200 -200 0 -200 0 0 -200z"/>
+<path d="M4750 6975 c-151 -90 -276 -169 -278 -175 -2 -5 -7 -8 -11 -6 -3 2
+-216 -120 -471 -273 l-465 -277 0 -313 0 -314 760 -453 c418 -249 763 -450
+768 -447 4 2 4 9 1 15 -4 6 -2 8 4 4 12 -7 15 -6 367 206 138 82 259 155 270
+161 82 48 151 92 156 99 3 6 8 8 10 6 4 -3 165 89 274 157 39 25 77 48 85 52
+43 20 185 108 188 115 2 4 9 8 14 8 6 0 44 21 85 46 l73 45 0 300 c0 164 -2
+299 -4 299 -16 0 -154 -89 -148 -95 4 -5 2 -5 -4 -2 -9 5 -99 -43 -114 -62 -3
+-3 -10 -7 -16 -8 -16 -3 -218 -125 -225 -136 -3 -5 -10 -9 -15 -9 -5 1 -31
+-14 -59 -31 -27 -17 -59 -36 -70 -42 -18 -10 -338 -202 -375 -225 -34 -20
+-316 -187 -365 -215 -29 -16 -59 -35 -66 -40 -8 -6 -26 -17 -41 -24 -26 -13
+-44 -4 -528 285 -275 165 -501 304 -502 309 -1 9 175 117 759 462 l233 138 0
+303 c0 166 -3 302 -7 301 -5 0 -132 -74 -283 -164z"/>
+<path d="M6040 6925 l0 -195 195 0 195 0 0 195 0 195 -195 0 -195 0 0 -195z"/>
+<path d="M5610 6725 l0 -125 120 0 120 0 0 125 0 125 -120 0 -120 0 0 -125z"/>
+<path d="M3520 5052 l0 -310 438 -260 c240 -144 583 -348 762 -455 179 -106
+327 -191 330 -188 3 4 22 15 43 26 20 11 37 23 37 27 0 5 5 8 11 8 6 0 66 33
+133 73 66 40 147 89 180 108 86 50 102 60 326 194 113 67 260 155 328 195 68
+40 129 78 135 85 7 6 16 12 20 12 4 1 56 30 114 65 58 34 126 75 152 89 l46
+26 2 301 c2 282 1 301 -15 295 -26 -9 -166 -95 -173 -105 -3 -5 -9 -9 -13 -8
+-4 1 -89 -47 -189 -107 -100 -59 -186 -110 -192 -112 -5 -2 -20 -13 -32 -24
+-13 -11 -23 -16 -23 -11 0 5 -7 0 -16 -11 -8 -11 -18 -19 -22 -17 -6 2 -193
+-107 -435 -252 -37 -23 -75 -45 -85 -51 -9 -5 -55 -32 -100 -60 -46 -27 -108
+-64 -138 -80 -30 -17 -59 -36 -66 -43 -7 -7 -15 -12 -19 -12 -5 0 -349 203
+-766 451 -417 249 -761 454 -765 456 -5 2 -8 -135 -8 -305z"/>
+<path d="M5495 2711 c-104 -26 -168 -106 -164 -207 1 -30 6 -57 11 -60 4 -3 8
+-14 8 -24 0 -24 79 -93 123 -107 20 -6 60 -10 89 -8 84 4 146 44 184 118 20
+37 23 132 6 149 -7 7 -12 20 -12 29 0 30 -84 94 -140 107 -57 13 -61 13 -105
+3z m144 -109 c29 -30 37 -48 39 -80 3 -45 -22 -110 -45 -119 -7 -3 -11 -9 -8
+-13 3 -4 -20 -11 -49 -14 -57 -8 -111 10 -129 41 -5 7 -11 11 -15 9 -4 -3 -8
+3 -9 12 0 9 -3 35 -5 57 -7 52 7 89 44 120 24 20 40 25 85 25 52 0 59 -3 92
+-38z"/>
+<path d="M5967 2703 c-49 -17 -106 -61 -125 -100 -7 -11 -14 -44 -18 -73 -21
+-171 157 -278 333 -200 l43 19 0 80 0 81 -40 0 -40 0 0 -60 c0 -70 -6 -75 -83
+-74 -78 1 -128 52 -129 132 0 51 25 98 64 118 36 19 149 16 156 -4 6 -18 30
+-14 52 8 l21 21 -23 19 c-25 21 -109 50 -142 49 -12 0 -43 -7 -69 -16z"/>
+<path d="M6460 2716 c-3 -2 -19 -7 -35 -10 -44 -8 -107 -59 -132 -107 -27 -50
+-30 -112 -8 -167 15 -38 74 -101 98 -106 6 -2 26 -8 42 -15 68 -28 190 9 238
+73 47 61 56 161 19 216 -9 14 -17 29 -17 35 0 15 -77 64 -110 70 -77 15 -90
+16 -95 11z m116 -105 c34 -36 52 -79 47 -111 -10 -70 -52 -116 -117 -127 -44
+-7 -118 27 -134 63 -20 42 -15 122 9 156 27 37 50 47 116 47 44 1 55 -3 79
+-28z"/>
+<path d="M3312 2508 l3 -203 88 -3 c216 -7 317 57 317 202 0 66 -12 101 -48
+140 -50 53 -93 66 -235 66 l-127 0 2 -202z m257 108 c58 -30 78 -114 41 -174
+-26 -42 -73 -62 -145 -62 l-55 0 0 131 0 132 63 -5 c35 -3 78 -13 96 -22z"/>
+<path d="M3912 2693 c-15 -27 -172 -383 -172 -388 0 -3 20 -5 45 -5 45 0 46 1
+65 45 l19 45 95 0 95 0 20 -45 c20 -45 21 -45 65 -43 26 0 46 4 46 7 0 3 -40
+94 -88 201 l-87 195 -47 3 c-37 2 -49 -1 -56 -15z m89 -161 l27 -67 -60 -3
+c-33 -2 -62 -1 -64 1 -2 2 6 28 19 58 13 30 27 63 31 73 9 26 16 16 47 -62z"/>
+<path d="M4170 2675 l0 -35 65 0 65 0 0 -170 0 -170 34 0 c68 0 66 -5 66 176
+l0 164 65 0 65 0 0 35 0 35 -180 0 -180 0 0 -35z"/>
+<path d="M4597 2515 c-48 -107 -87 -200 -87 -205 0 -6 20 -10 44 -10 43 0 45
+1 62 45 l17 45 97 0 97 0 17 -45 c17 -44 19 -45 60 -45 24 0 45 3 48 6 3 3
+-34 94 -83 202 l-88 197 -49 3 -49 3 -86 -196z m166 27 c15 -37 27 -71 27 -75
+0 -4 -27 -7 -61 -7 -54 0 -60 2 -55 18 33 87 52 132 57 132 3 0 18 -30 32 -68z"/>
+<path d="M5010 2510 l-1 -200 146 0 145 0 0 34 0 35 -102 -1 -103 0 -3 166 -2
+166 -39 0 -39 0 -2 -200z"/>
+</g>
+</svg>
+<div class="flex-1  h-full flex flex-col items-center justify-center">
+    <form [formGroup]="register" class="flex flex-col justify-center sm:w-4/6 w-5/6 space-y-5" appSamevalidator   (ngSubmit)="isSubmit.set(true);submitForm()">
       <div class="flex flex-col space-y-2 dark:text-gray-300 text-black">
           <label for="email" class="leading-5">Email</label>
           <input class="form-input" formControlName="email" required [email]="true"  type="email" name="email" id="email">
@@ -37,11 +105,12 @@
         </nz-input-group>
       </div>
       <div class="flex flex-col space-y-2">
-        <button nz-button nzType="primary" [nzLoading]="isSubmit()" [disabled]="register.invalid" >Submit</button>
+        <button nz-button nzType="primary" [nzSize]="'large'" [nzLoading]="isSubmit()" [disabled]="register.invalid" >Submit</button>
         <span>You already have account <a routerLink="/login">SignIn</a></span> 
       </div>
     </form> 
-  </nz-card>
+  </div>
+  <!-- </nz-card> -->
   <ng-template #suffixTemplate>
     <span
       nz-icon
